Adds Terragrunt CLI redesign support
Refactors to support the new Terragrunt CLI redesign, including `run` command prefix, `TG_` environment variables, backend bootstrap, and new dependency discovery commands.

--- a/config/config.example.yaml
+++ b/config/config.example.yaml
@@ -16,6 +16,15 @@ terragrunt:
   cache_dir: ".terragrunt-cache"
   parallelism: 10
   timeout: 3600  # 1 hour timeout
+  
+  # New CLI redesign settings
+  backend_bootstrap: true     # Enable automatic backend resource provisioning
+  non_interactive: true       # Run in non-interactive mode (uses TG_NON_INTERACTIVE)
+  use_run_command: true       # Use 'run' command prefix for operations
+  
+  # Advanced settings
+  max_retries: 3              # Maximum retries for failed operations
+  retry_delay: 5              # Delay between retries in seconds
 
 # Slack Configuration (optional)
 slack:
