--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "terragrunt-gcp-mcp"
-version = "0.3.1"
-description = "MCP server for Terragrunt GCP infrastructure management with experimental features support"
+version = "0.3.3"
+description = "MCP server for Terragrunt GCP infrastructure management with experimental features support, AutoDevOps assistant integration, and comprehensive cost management"
 authors = [
     {name = "Your Name", email = "your.email@example.com"}
 ]
