--- a/.github/workflows/manual-release.yml
+++ b/.github/workflows/manual-release.yml
@@ -190,6 +190,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
 
       - name: Install dependencies
         run: |
