--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -186,8 +186,12 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm'
 
-      - name: Install semantic-release
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Install semantic-release globally
         run: |
           npm install -g semantic-release@22 \
             @semantic-release/changelog@6 \
