--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -45,7 +45,10 @@ jobs:
           node-version: '20'
           cache: 'npm'
 
-      - name: Install semantic-release
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Install semantic-release globally
         run: |
           npm install -g semantic-release@22 \
             @semantic-release/changelog@6 \
