--- a/pyproject.toml
+++ b/pyproject.toml
@@ -139,6 +139,8 @@ markers = [
     "integration: marks tests as integration tests",
     "experimental: marks tests for experimental features",
 ]
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
 
 [tool.coverage.run]
 source = ["src/terragrunt_gcp_mcp"]
